objects/Testing_Request__c.object
<CustomObject>
    <description>Order Entry request area for customers to directly request concierge and courier kits and tests run onsite.</description>
    <label>Testing Request</label>
    <nameField>
        <displayFormat>NBCUCC{0000}</displayFormat>
        <label>Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testing Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>PickupAddress_City__c</fullName>
        <label>Pickup Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DropoffAddress_City__c</fullName>
        <label>Dropoff Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickupAddress_State__c</fullName>
        <label>Pickup Address State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DropOffAddress_State__c</fullName>
        <label>DropOff Address State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickupAddress_Street__c</fullName>
        <label>Pickup Address Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DropOffAddress_Street__c</fullName>
        <label>DropOff Address Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PickupAddress_ZipCode__c</fullName>
        <label>Pickup Address Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DropOffAddress_ZipCode__c</fullName>
        <label>DropOff Address Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Courier_Request</fullName>
        <active>true</active>
        <label>Courier Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Concierge_Testing</fullName>
        <active>true</active>
        <label>Concierge Testing</label>
    </recordTypes>
</CustomObject>